Added font on most links

--- a/PokeVerse/Pages/Shared/_Layout.cshtml
+++ b/PokeVerse/Pages/Shared/_Layout.cshtml
@@ -6,10 +6,12 @@
     <title>@ViewData["Title"] - PokeVerse</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+    <header style="font-family: 'VT323', monospace; font-size:x-large;">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" >
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-page="/Index">PokeVerse</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -20,13 +22,13 @@
                     <partial name="_LoginPartial" />
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
+                            <a id="navfont" class="nav-link text-dark" asp-area="" asp-page="/Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Pokedex/Index">Pokedex</a>
+                            <a id="navfont" class="nav-link text-dark" asp-area="" asp-page="/Pokedex/Index">Pokedex</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Catalogue">Catalogue</a>
+                            <a id="navfont" class="nav-link text-dark" asp-area="" asp-page="/Catalogue">Catalogue</a>
                         </li>
                     </ul>
                 </div>
