--- a/PokeVerse/Pages/Shared/_Layout.cshtml
+++ b/PokeVerse/Pages/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <header style="font-family: 'VT323', monospace; font-size:x-large;">
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3" >
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-page="/Index">PokeVerse</a>
+                <a class="navbar-brand" asp-area="" asp-page="/Index" style="font-family: 'VT323', monospace; font-size:x-large;">PokeVerse</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
