--- a/PokeVerse/Pages/Shared/_LoginPartial.cshtml
+++ b/PokeVerse/Pages/Shared/_LoginPartial.cshtml
@@ -2,7 +2,7 @@
 @inject SignInManager<IdentityUser> SignInManager
 @inject UserManager<IdentityUser> UserManager
 
-<ul class="navbar-nav">
+<ul class="navbar-nav" >
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
@@ -10,7 +10,7 @@
     </li>
     <li class="nav-item">
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link text-dark" style="font-family: 'VT323', monospace; font-size:x-large;">Logout</button>
         </form>
     </li>
 }
